# planetary-defense

./: .gitignore  CHANGELOG.md  Cargo.toml  DEVLOG.md  GAME_IDEA.md  README.md  default_env.tres  export_presets.cfg  project.godot
.github/workflows/: release.yml  tests.yml
assets/: camera_env.tres  default.theme  default_env.tres
assets/fonts/: consolas.tres  consolas_20.tres  consolas_24.tres  consolas_32.tres  consolas_46.tres  consolas_bold.tres
assets/geom/: .gitattributes  air_defense.blend  air_defense.escn  air_defense.escn.import  city.blend  city.escn  city.escn.import  clear.blend  clear.escn  clear.escn.import  crops.blend  crops.escn  crops.escn.import  factory.blend  factory.escn  factory.escn.import  fishery.blend  fishery.escn  fishery.escn.import  forest.blend  forest.escn  forest.escn.import  irr_crops.escn  irr_crops.escn.import  mines.blend  mines.escn  mines.escn.import  normals_to_vcolor.py  oil_rig.blend  oil_rig.escn  oil_rig.escn.import  oil_well.blend  oil_well.escn  oil_well.escn.import  port.blend  port.escn  port.escn.import  power_plant.blend  power_plant.escn  power_plant.escn.import  (+2 more)
assets/icons/: icon.svg.import
assets/materials/: default_red.tres  default_sand.tres  height_map.tres  unlit_vertex_color.tres  unlit_vertex_color_large.tres  uv_test.tres  vegetation.tres  vertex_color.tres  vertex_color_transp.tres  water.tres  water_simple.tres
assets/params/: default_height_curve.tres  height_curve_continental.tres  (+6 more)
docs/: tutorial.md
native/: multi_commodity.gdns  network_simplex.gdns  planetary_defense.gdnlib
scenes/: World.tscn  camera_control.tscn  ico_test.tscn  material_test.tscn  mouse.tscn  planet.tscn  rust_test.tscn  world.tscn
scripts/: camera_control.gd  city_names.gd  constants.gd  debug_draw.gd  mouse.gd  no_dupli_ico.gd  planet.gd  planet_settings.gd  rotate_y.gd  rust_test.gd  settings.gd  world.gd
src/: flow.rs  lib.rs  network.rs  path.rs
(+467 files in other folders)
