[package]
name = "planetary_defense"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1

[lib]
crate-type = ["cdylib"]

[dependencies]
gdnative = "0.9.3"
euclid = { version="0.22.6", optional=false }
pathfinding = "3.0.5"
rand = "0.8.4"
noise = { version="0.7.0", features = [], optional=false }
kdtree = { version = "0.6.0", features = [], optional=false }
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"], optional=false }
csv = "1.1.6"
